k8s/app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: life
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
