k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  rules:
    - host: app.local
      http:
        paths:
          - pathType: Prefix
            path: /posts
            backend:
              service:
                name: app
                port:
                  number: 80
